welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: ')' expected but '}' found.
  }
  ^Array2:16: error: identifier expected but integer literal found.
  T[0] = getCouleurSol()
    ^Array2:17: error: ']' expected but ';' found.
  for (i<- 1 to getMondeHauteur())
^Array2:20: error: ';' expected but '=' found.
    T[i] = getCouleurSol()
         ^